--- a/scss/main.scss
+++ b/scss/main.scss
@@ -177,6 +177,7 @@ footer {
         width: 327px;
         min-height: 535px;
         height: fit-content;
+        margin-top: 50px;
 
         .box {
             z-index: 9999999999;
